clusters/home/apps/kube-system/traefik/configs/traefik/traefik-authentik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-service-middleware
  namespace: authentik
spec:
  forwardAuth:
    # the subdomain here is the exact name of the outpost created which can be found via:
    # kubectl get deploy -n authentik
    address: "http://authentik-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik"
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
